Foi inserido uma foto minha e uma imagem de código html

--- a/Site Rodrigo/index.html
+++ b/Site Rodrigo/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <header>
+            <img src="Foto Rodrigo 100x100.png" alt="Minha Foto">
             <h1>Rodrigo Takahashi</h1>
         </header>
         <section>
@@ -15,6 +16,7 @@
             <article>
                 <Header>
                     <H3>Post #1</H3>
+                    <img src="pankaj-patel-u2Ru4QBXA5Q-unsplash.jpg" alt="Editor de texto usando código HTML">
                 </Header>
             </article>
             <p>
