Inserido tags li,ule ol no código para listagem

--- a/Site Rodrigo/index.html
+++ b/Site Rodrigo/index.html
@@ -23,6 +23,18 @@
                 Lorem ipsum dolor sit amet, <a href="https://www.linkedin.com/in/haruotaks/"target="_blank">consectetur adipiscing</a> elit. Etiam eu tortor magna. Mauris tempor, ligula quis semper viverra, lacus ante aliquam dui, at <a href="mailto:rodrigo.taka2@gmail.com">sollicitudin</a> sapien justo ac magna. Sed et nunc bibendum, varius tortor id, sollicitudin nisi. Aenean in mollis urna, a dictum elit. Sed posuere tellus mi, id interdum libero viverra eget. Integer vel blandit quam, nec ornare ex. Nullam ex enim, euismod at convallis eget, porttitor at odio. Nullam a feugiat leo.
             </p>
         </section>
-        <footer></footer>
+        <footer>
+            <ol>
+                <li>
+                    <a href="mailto:rodrigo.taka2@gmail.com">rodrigo.taka2@gmail.com</a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/haruotaks/"target="_blank">linkedin</a>
+                </li>
+                <li>
+                    <a href="https://github.com/HaruoTaks" target="_blank">github</a>
+                </li>
+            </ol>
+        </footer>
     </body>
 </html>
