--- a/Site Rodrigo/index.html
+++ b/Site Rodrigo/index.html
@@ -3,19 +3,20 @@
     <head>
         <meta charset="utf-8">
         <title>Rodrigo Takahashi</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
             <img src="Foto Rodrigo 100x100.png" alt="Minha Foto">
-            <h1>Rodrigo Takahashi</h1>
+            <h1 id="title">Rodrigo Takahashi</h1>
         </header>
         <section>
             <Header>
-                <h2>Posts</h2>
+                <h2 class="subtitle">Posts</h2>
             </Header>
             <article>
                 <Header>
-                    <H3>Post #1</H3>
+                    <H3 class="post_title">Post #1</H3>
                     <img src="pankaj-patel-u2Ru4QBXA5Q-unsplash.jpg" alt="Editor de texto usando código HTML">
                 </Header>
             </article>
