--- a/Site Rodrigo/index.html
+++ b/Site Rodrigo/index.html
@@ -19,13 +19,13 @@
                     <H3 class="post_title">Post #1</H3>
                     <img src="pankaj-patel-u2Ru4QBXA5Q-unsplash.jpg" alt="Editor de texto usando código HTML" class="post_image">
                 </Header>
+                <p class="post_content">
+                    Lorem ipsum dolor sit amet, <a href="https://www.linkedin.com/in/haruotaks/"target="_blank">consectetur adipiscing</a> elit. Etiam eu tortor magna. Mauris tempor, ligula quis semper viverra, lacus ante aliquam dui, at <a href="mailto:rodrigo.taka2@gmail.com">sollicitudin</a> sapien justo ac magna. Sed et nunc bibendum, varius tortor id, sollicitudin nisi. Aenean in mollis urna, a dictum elit. Sed posuere tellus mi, id interdum libero viverra eget. Integer vel blandit quam, nec ornare ex. Nullam ex enim, euismod at convallis eget, porttitor at odio. Nullam a feugiat leo.
+                </p>
             </article>
-            <p class="post_content">
-                Lorem ipsum dolor sit amet, <a href="https://www.linkedin.com/in/haruotaks/"target="_blank">consectetur adipiscing</a> elit. Etiam eu tortor magna. Mauris tempor, ligula quis semper viverra, lacus ante aliquam dui, at <a href="mailto:rodrigo.taka2@gmail.com">sollicitudin</a> sapien justo ac magna. Sed et nunc bibendum, varius tortor id, sollicitudin nisi. Aenean in mollis urna, a dictum elit. Sed posuere tellus mi, id interdum libero viverra eget. Integer vel blandit quam, nec ornare ex. Nullam ex enim, euismod at convallis eget, porttitor at odio. Nullam a feugiat leo.
-            </p>
         </section>
         <footer>
-            <ol>
+            <ul class="contact_list">
                 <li>
                     <a href="mailto:rodrigo.taka2@gmail.com">rodrigo.taka2@gmail.com</a>
                 </li>
@@ -35,7 +35,7 @@
                 <li>
                     <a href="https://github.com/HaruoTaks" target="_blank">github</a>
                 </li>
-            </ol>
+            </ul>
         </footer>
     </body>
 </html>
